--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         </section>
         <!--Contact Form-->
         <section class="py-16 md:py-24 px-12 md:px-24 bg-teal-100 text-white">
-            <div class="container flex mx-auto bg-teal-950 w-2/4 px-6 rounded-lg shadow-lg">
-                <form class="flex flex-col px-4 pt-4 pb-12 w-full bg-teal-950 overflow-auto">
+            <div class="container flex mx-auto bg-teal-950 w-full md:w-2/4 px-6 rounded-lg shadow-lg">
+                <form class="flex flex-col px-4 pt-4 pb-12 w-full bg-teal-950">
                     <h3 class="text-2xl font-semibold py-4">Contact Us</h3>
                     <fieldset class="flex flex-col gap-4">
                         <div class="flex flex-col gap-1">
